--- a/public/Post-Entry-Services.html
+++ b/public/Post-Entry-Services.html
@@ -101,14 +101,12 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
-                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
-
-
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
 
@@ -158,57 +156,24 @@
                             <h3> Services </h3>
                         </div>
                         <div class="panel-heading-Studies service1_heading ">
-                            <h4>1. India Entry Strategy </h4>
+                            <h4>3. Post-Entry Services : </h4>
                         </div>
-                        <p style="color:black ; padding-top: 10px;">
-                            1.1 Market Exploration Phase:
-                        </p>
-                        <p style="padding-top: 10px;">
-                            At Global Axis, we provide our clients with fast and cost-effective market-exploration services. We not only provide desk research but also practical & on the ground studies based on our experience and knowledge of Indian market. Competition mapping,
-                            technical barriers, quality issues, pricing and positioning are such aspects we specialize in.
-                        </p>
-                        <p style="color:black ; padding-top: 10px;">
-                            Range of services:
-                        </p>
+                        <p style="padding-top: 15px;padding-bottom: 15px;">Now that the clients have entered India, it is paramount for them to be successful. This part of the practice involves the following aspects:</p>
 
                         <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Identifying potential customers and business leads</li>
-                            <li> Identifying entry barriers in the new market</li>
-                            <li>Identifying competition in the market through a detailed competitor's analysis </li>
-                            <li>Pricing & positioning</li>
-                            <li>Sales & distribution channels</li>
-                            <li>Identifying right partners and contract manufacturers</li>
-                            <li>Examination of government regulations</li>
-                            <li> Location analysis </li>
+                            <li>Full interim support to client’s India business till client builds local capacity.</li>
+                            <li>Regular & on-going regulatory & statutory support.</li>
+                            <li> Good HR practices and cultural fine tuning in India.</li>
+                            <li>Assist in hiring right resources as & when needed for successful operations of your organization.</li>
+                            <li> Providing good vendors & service providers as per the requirement in future.</li>
+                            <li>Clear confusion in techno-commercial elements in context with new latest developments.</li>
+                            <li>Reduce wastage & minimize in-efficiency due to India-specific conditions.</li>
+                            <li>Regular review meetings with the client and implementation of desired objectives.</li>
+                            <li>Interim project management.</li>
                         </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">
-                            Besides offering the above-mentioned services in market exploration phase, Global Axis arranges Client’s India Validation Visit to assess the ground realities and make appropriate strategies for clients. All this is done in close-coordination with our
-                            clients.
-                        </p>
-                        <p style="color:black ;padding-top: 10px; padding-bottom: 10px;">
-                            1.2 Strategy Exploration & Formulation Phase
-                        </p>
-                        <p> We provide a complete go-to-market strategy with our recommendations on product, pricing, positioning, segmentation and other issues peculiar to Indian market.</p>
-                        <p style="color:black ; padding-top: 10px;">India entry options:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Sales office or branch office or alternative</li>
-                            <li>Greenfield operation through wholly owned Indian subsidiary</li>
-                            <li>Acquisition of Indian target company</li>
-                            <li>Joint venture</li>
-                            <li>Selecting the right partner for distribution, contract manufacturing or sourcing</li>
 
-                        </ul>
-                        <p style=" padding-top: 10px; padding-bottom: 10px;">Once the client selects India entry option, we help in preparation of a joint business plan.</p>
-                        <p style="color:black ; padding-top: 10px;">1.3 Strategy Implementation Phase</p>
 
-                        <p style="  padding-bottom: 10px;">There is nothing more thrilling than to see strategy being implemented & taking shape in concrete. This crucial task is conducted by our experts and consists of:</p>
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Incorporation of the Indian entity</li>
-                            <li>Commence acquisition or set-up greenfield facility</li>
-                            <li>Seeking all regulatory approvals from central and state government bodies</li>
-                            <li>Selecting and acquiring a suitable site in case of greenfield operations</li>
-                            <li>Recruitment of key top executives </li>
-                        </ul>
+
                     </div>
                 </div>
 
@@ -245,6 +210,7 @@
                                 <p><a href="index.html ">HOME</a></p>
                                 <p><a href="aboutus.html ">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
+
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
                                 <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
