--- a/public/Sourcing-from-India.html
+++ b/public/Sourcing-from-India.html
@@ -101,9 +101,9 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
-                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
@@ -152,27 +152,31 @@
                 <div class="col-md-12">
 
                     <div class="panel panel-default" style="padding: 20px;">
+
                         <div class="panel-heading-Studies">
                             <h3> Services </h3>
                         </div>
-                        <div class="panel-heading-Studies service1_heading ">
-                            <h4>3. Post-Entry Services : </h4>
+                        <div class="panel-heading-Studies service2_heading">
+                            <h4> 2. Sourcing from India:
+                            </h4>
+                            <p style=" padding-top: 10px; padding-bottom: 10px;">At Global Axis, we believe in “Be profitable by right sourcing”. We specialize in global sourcing from India to achieve many objectives for our clients that can be strategic, costs, quality, capacity or others.
+                                <p style=" color:black">Our Practices:</p>
+                                <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                    <li>Supplier identification, assessment and development.</li>
+                                    <li>To act as an International purchasing office for our client</li>
+                                    <li>To find a suitable logistics partner and assist in all issues related to packaging and logistics</li>
+                                    <li>To provide complete end to end service related to supplies, schedules, delivery, follow ups, and so on.</li>
+
+                                </ul>
+                                <p style="padding-top: 10px;">Our methodology for supplier –search is illustrated below:</p>
+                                <img src="assets/images/image-1.png">
+                                <p style=" color:black; padding-top: 10px;">Our Strengths:</p>
+                                <ul class="a " style="margin-left: 15px;text-align: justify ">
+                                    <li>Highly focused supplier search due to varied experience about Indian vendor base.</li>
+                                    <li>Clarify any communication and technical gaps that come up from time to time in line with latest developments.</li>
+                                    <li>Reduce risks of failure and gestation time to make global sourcing from low cost countries a reality and not a pipedream.</li>
+                                </ul>
                         </div>
-                        <p style="padding-top: 15px;padding-bottom: 15px;">Now that the clients have entered India, it is paramount for them to be successful. This part of the practice involves the following aspects:</p>
-
-                        <ul class="a " style="margin-left: 15px;text-align: justify ">
-                            <li>Full interim support to client’s India business till client builds local capacity.</li>
-                            <li>Regular & on-going regulatory & statutory support.</li>
-                            <li> Good HR practices and cultural fine tuning in India.</li>
-                            <li>Assist in hiring right resources as & when needed for successful operations of your organization.</li>
-                            <li> Providing good vendors & service providers as per the requirement in future.</li>
-                            <li>Clear confusion in techno-commercial elements in context with new latest developments.</li>
-                            <li>Reduce wastage & minimize in-efficiency due to India-specific conditions.</li>
-                            <li>Regular review meetings with the client and implementation of desired objectives.</li>
-                            <li>Interim project management.</li>
-                        </ul>
-
-
 
                     </div>
                 </div>
