--- a/public/index.html
+++ b/public/index.html
@@ -101,9 +101,9 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
-                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
 
                                         </ul>
                                     </li>
@@ -163,21 +163,21 @@
                         <div class="panel-heading details">
                             <h4>India entry strategy</h4>
                             <p style=" text-align: justify;"> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
-                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="India-entry-strategy.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
                             <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="Sourcing-from-india.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Post entry services</h4>
                             <p style=" text-align: justify;"> Now that the clients have entered India, it is paramount for them to be successful. </p>
-                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="Post-entry-services.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
@@ -218,7 +218,7 @@
                             <div class="overlay"> CERAMIC PRINTING</div>
                         </div>
                         <div class="col-md-6">
-                            <img class="change_height" src="assets/images/SandPrinting.jpg" alt="" class="img-responsive" style="height: 240px;">
+                            <img src="assets/images/SandPrinting.png" alt="" style="width:100%">
                             <div class="overlay">SAND PRINTING</div>
                         </div>
                     </div>
