--- a/public/services.html
+++ b/public/services.html
@@ -101,9 +101,10 @@
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
-                                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+                                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
+                                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
+
 
                                         </ul>
                                     </li>
@@ -157,9 +158,9 @@
                             <h4> Services </h4>
                         </div>
                         <ul class="a " style="margin-left: 10px;text-align: justify ">
-                            <li><a href="India Entry Strategy.html">India Entry Strategy</a></li>
-                            <li><a href="Sourcing from India.html">Sourcing from India</a></li>
-                            <li><a href="Post Entry Services.html">Post Entry Services</a> </li>
+                            <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
+                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                            <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
 
 
                         </ul>
