--- a/public/Post-Entry-Services.html
+++ b/public/Post-Entry-Services.html
@@ -102,7 +102,7 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVICES <span class="caret"></span></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="India-Entry-Strategy.html">India Entry Strategy</a></li>
-                                            <li><a href="Sourcing-from-India.html">Sourcing from India</a></li>
+                                            <li><a href="Sourcing-From-India.html">Sourcing from India</a></li>
                                             <li><a href="Post-Entry-Services.html">Post Entry Services</a> </li>
 
                                         </ul>
