--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
                         <div class="panel-heading details">
                             <h4>Company profile</h4>
                             <p style=" text-align: justify;">Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
-                            <button type="button" class="btn btn-primary btn-sm">Read more</button>
+                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="aboutus.html">Read more</a></button>
                         </div>
 
                     </div>
