--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
                         <div class="panel-heading details">
                             <h4>Company profile</h4>
                             <p style=" text-align: justify;">Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
-                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="aboutus.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white"  href="aboutus.html">Read more</a></button>
                         </div>
 
                     </div>
@@ -163,21 +163,21 @@
                         <div class="panel-heading details">
                             <h4>India entry strategy</h4>
                             <p style=" text-align: justify;"> At Global Axis, we provide our clients with fast and cost-effective market-exploration services. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="India-Entry-Strategy.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white"  href="India-Entry-Strategy.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
                             <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="Sourcing-From-India.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="Sourcing-From-India.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Post entry services</h4>
                             <p style=" text-align: justify;"> Now that the clients have entered India, it is paramount for them to be successful. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a a style="color:white"  href="Post-Entry-Services.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="Post-Entry-Services.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
