--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
                         <div class="panel-heading details">
                             <h4>Sourcing from india</h4>
                             <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="Sourcing-From-India.html">Read more</a></button>
+                            <button type="button" class="btn btn-primary btn-sm"><a  style="color:white"  href="SourcingFromIndia.html">Read more</a></button>
                         </div>
                     </div>
                     <div class="panel panel-info">
