--- a/public/India-Entry-Strategy.html
+++ b/public/India-Entry-Strategy.html
@@ -108,6 +108,7 @@
                                         </ul>
                                     </li>
 
+                                    <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
@@ -220,16 +221,17 @@
     </section>
 
     <!-- footer-copyright start -->
-    <footer class="footer-copyright ">
-        <div class="container ">
-            <div class="footer-content ">
-                <div class="row ">
+    <footer class="footer-copyright">
+        <div class="container">
+            <div class="footer-content">
+                <div class="row">
 
-                    <div class="col-sm-3 ">
-                        <div class="single-footer-item ">
-                            <div class="footer-logo ">
-                                <a href="index.html ">
-                                    <img class="img-responsive grow " src="assets/images/logo.png " />
+                    <div class="col-sm-3">
+                        <div class="single-footer-item">
+                            <h2 style="color:white">OUR PARNTER</h2>
+                            <div class="footer-logo">
+                                <a href="https://www.exone.com/" target="_blank">
+                                    <img class="img-responsive grow" style="max-width: 70%;" src="assets/images/exone-metal-logo.png" />
                                 </a>
 
                             </div>
@@ -238,13 +240,14 @@
                     </div>
                     <!--/.col-->
 
-                    <div class="col-sm-3 ">
-                        <div class="single-footer-item ">
-                            <h2 style="color:white ">LINK</h2>
-                            <div class="single-footer-txt ">
-                                <p><a href="index.html ">HOME</a></p>
-                                <p><a href="aboutus.html ">ABOUT US</a> </p>
+                    <div class="col-sm-3">
+                        <div class="single-footer-item">
+                            <h2 style="color:white">LINK</h2>
+                            <div class="single-footer-txt">
+                                <p><a href="index.html">HOME</a></p>
+                                <p><a href="aboutus.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
+                                <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
                                 <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
@@ -255,10 +258,10 @@
                     </div>
                     <!--/.col-->
 
-                    <div class="col-sm-3 ">
-                        <div class="single-footer-item ">
-                            <h2 style="color:white "> ABOUT US </h2>
-                            <div class="single-footer-txt ">
+                    <div class="col-sm-3">
+                        <div class="single-footer-item">
+                            <h2 style="color:white"> ABOUT US </h2>
+                            <div class="single-footer-txt">
                                 <p>Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
                             </div>
                             <!--/.single-footer-txt-->
@@ -267,13 +270,13 @@
                     </div>
                     <!--/.col-->
 
-                    <div class="col-sm-3 ">
-                        <div class="single-footer-item text-center ">
-                            <h2 class="text-left " style="color:white ">contacts</h2>
-                            <div class="single-footer-txt text-left ">
+                    <div class="col-sm-3">
+                        <div class="single-footer-item text-center">
+                            <h2 class="text-left" style="color:white">CONTACTS</h2>
+                            <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
-                                <p class="foot-email "><a href="# "> sanjay.gupta@globalaxis.in</a></p>
+                                <p class="foot-email"><a href="#"> sanjay.gupta@globalaxis.in</a></p>
                                 <p>B-XI/8242</p>
                                 <p>Vasant Kunj New Delhi – 110070</p>
                                 <p>INDIA</p>
@@ -291,18 +294,18 @@
             <!--/.footer-content-->
             <hr>
             <div class="foot-icons ">
-                <ul class="footer-social-links list-inline list-unstyled ">
-                    <li><a href="# " target="_blank " class="foot-icon-bg-1 "><i class="fa fa-facebook "></i></a></li>
-                    <li><a href="# " target="_blank " class="foot-icon-bg-2 "><i class="fa fa-twitter "></i></a></li>
-                    <li><a href="# " target="_blank " class="foot-icon-bg-3 "><i class="fa fa-instagram "></i></a></li>
-                    <li><a href="# " target="_blank " class="foot-icon-bg-1 "><i class="fa fa-linkedin "></i></a></li>
+                <ul class="footer-social-links list-inline list-unstyled">
+                    <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p style="color:white ">&copy; 2020 <a style="color:white " href="https://www.globalaxis.com ">GlobalAxis</a>. All Right Reserved</p>
+                <p style="color:white">&copy; 2020 <a style="color:white" href="https://www.globalaxis.com">GlobalAxis</a>. All Right Reserved</p>
 
             </div>
             <!--/.foot-icons-->
-            <div id="scroll-Top ">
-                <i class="fa fa-angle-double-up return-to-top " id="scroll-top " data-toggle="tooltip " data-placement="top " title=" " data-original-title="Back to Top " aria-hidden="true "></i>
+            <div id="scroll-Top">
+                <i class="fa fa-angle-double-up return-to-top" id="scroll-top" data-toggle="tooltip" data-placement="top" title="" data-original-title="Back to Top" aria-hidden="true"></i>
             </div>
             <!--/.scroll-Top-->
         </div>
