--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 
                                         </ul>
                                     </li>
-
+                                    <li class="smooth-menu"><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING </a></li>
 
                                     <li class="smooth-menu"><a href="case-studies.html">CASE STUDIES </a></li>
                                     <li class="smooth-menu"><a href="contatus.html">CONTACT US</a></li>
@@ -154,7 +154,8 @@
                     <div class="panel panel-info">
                         <div class="panel-heading details">
                             <h4>Company profile</h4>
-                            <p style=" text-align: justify;">Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
+                            <p style=" text-align: justify;"> Global Axis is a specialized consulting company helping foreign companies to enter India. Global Axis is a business partner of trust for ExOne in India since 2012 and we have been at the forefront of bringing binder jet 3D
+                                printing technologies from ExOne.</p>
                             <button type="button" class="btn btn-primary btn-sm"><a style="color:white"  href="aboutus.html">Read more</a></button>
                         </div>
 
@@ -182,9 +183,9 @@
                     </div>
                     <div class="panel panel-info">
                         <div class="panel-heading details">
-                            <h4>3D printing</h4>
-                            <p style=" text-align: justify;"> At Global Axis, we believe in “Be profitable by right sourcing”. </p>
-                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white" href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank" ">Read more</a></button>
+                            <h4>ExOne </h4>
+                            <p style=" text-align: justify;"> We’re on a mission to deliver powerful 3D printers that solve the toughest problems and enable world-changing innovations. Collaborate, Innovate, Accelerate. </p>
+                            <button type="button" class="btn btn-primary btn-sm"><a style="color:white" href="https://www.exone.com/" target="_blank" >Read more</a></button>
                         </div>
                     </div>
 
@@ -197,10 +198,19 @@
                             <div class="overlay">AUTOMOTIVE</div>
                         </div>
                         <div class="col-md-6">
+                            <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
+                            <div class="overlay">METAL PRINTING</div>
+                        </div>
+                    </div>
+                    <div class="row ex">
+                        <div class="col-md-6">
                             <img src="assets/images/2Ex.jpeg" alt="" style="width:100%">
                             <div class="overlay"> HEALTHCARE</div>
                         </div>
-
+                        <div class="col-md-6">
+                            <img src="assets/images/SandPrinting.png" alt="" style="width:100%">
+                            <div class="overlay">SAND PRINTING</div>
+                        </div>
                     </div>
                     <div class="row ex">
                         <div class="col-md-6">
@@ -208,18 +218,8 @@
                             <div class="overlay">INDUSTRIAL</div>
                         </div>
                         <div class="col-md-6">
-                            <img class="change_height" src="assets/images/1Ex.JPG" alt="" class="img-responsive" style="height: 240px;">
-                            <div class="overlay">METAL PRINTING</div>
-                        </div>
-                    </div>
-                    <div class="row ex">
-                        <div class="col-md-6">
                             <img src="assets/images/CeramicPrinting.jpg" alt="" class="img-responsive">
                             <div class="overlay"> CERAMIC PRINTING</div>
-                        </div>
-                        <div class="col-md-6">
-                            <img src="assets/images/SandPrinting.png" alt="" style="width:100%">
-                            <div class="overlay">SAND PRINTING</div>
                         </div>
                     </div>
 
@@ -270,9 +270,10 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
+                            <h2 style="color:white">OUR PARNTER</h2>
                             <div class="footer-logo">
-                                <a href="index.html">
-                                    <img class="img-responsive grow" src="assets/images/logo.png" />
+                                <a href="https://www.exone.com/" target="_blank">
+                                    <img class="img-responsive grow" style="max-width: 70%;" src="assets/images/exone-metal-logo.png" />
                                 </a>
 
                             </div>
@@ -288,6 +289,7 @@
                                 <p><a href="index.html">HOME</a></p>
                                 <p><a href="aboutus.html">ABOUT US</a> </p>
                                 <p><a href="services.html"> SERVICES</a></p>
+                                <p><a href="assets/pdf/ExOne-Corporate-Brochure-2020.pdf" target="_blank">3D PRINTING</a></p>
                                 <p><a href="case-studies.html"> CASE STUDIES</a></p>
                                 <p><a href="contatus.html">CONTACT US</a></p>
                             </div>
@@ -312,7 +314,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item text-center">
-                            <h2 class="text-left" style="color:white">contacts</h2>
+                            <h2 class="text-left" style="color:white">CONTACTS</h2>
                             <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
