--- a/public/index.html
+++ b/public/index.html
@@ -270,12 +270,14 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2 style="color:white">OUR PARNTER</h2>
+                            <!-- <h2 style="color:white">OUR PARNTER</h2> -->
+                            <a href="#" target="_blank">
+                                <img class="img-responsive grow" style="max-width: 85%;" src="assets/images/logo.png" />
+                            </a>
                             <div class="footer-logo">
                                 <a href="https://www.exone.com/" target="_blank">
-                                    <img class="img-responsive grow" style="max-width: 70%;" src="assets/images/exone-metal-logo.png" />
+                                    <img class="img-responsive grow" style="max-width: 65%;" src="assets/images/exone-metal-logo.png" />
                                 </a>
-
                             </div>
                         </div>
                         <!--/.single-footer-item-->
@@ -284,7 +286,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2 style="color:white">LINK</h2>
+                            <h2>LINK</h2>
                             <div class="single-footer-txt">
                                 <p><a href="index.html">HOME</a></p>
                                 <p><a href="aboutus.html">ABOUT US</a> </p>
@@ -302,7 +304,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2 style="color:white"> ABOUT US </h2>
+                            <h2> ABOUT US </h2>
                             <div class="single-footer-txt">
                                 <p>Global Axis is a specialized consulting company helping foreign companies to enter India by assisting them in strategizing and implementing their execution plans for a successful venture in India.</p>
                             </div>
@@ -314,7 +316,7 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item text-center">
-                            <h2 class="text-left" style="color:white">CONTACTS</h2>
+                            <h2 class="text-left" style="">CONTACTS</h2>
                             <div class="single-footer-txt text-left">
                                 <p> <strong>Tel.:</strong>0091-11-46767719, 46076724</p>
                                 <p><strong>Mob.:</strong>0091-9811141647</p>
@@ -337,12 +339,12 @@
             <hr>
             <div class="foot-icons ">
                 <ul class="footer-social-links list-inline list-unstyled">
-                    <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
+                    <!-- <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li> -->
                     <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p style="color:white">&copy; 2020 <a style="color:white" href="https://www.globalaxis.com">GlobalAxis</a>. All Right Reserved</p>
+                <p style="color:black">&copy; 2020 <a style="color:black" href="https://www.globalaxis.com"><strong>GlobalAxis</strong></a>. All Right Reserved</p>
 
             </div>
             <!--/.foot-icons-->
