--- a/public/services.html
+++ b/public/services.html
@@ -258,7 +258,7 @@
                     <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li> -->
                     <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p style="color:black">&copy; 2020 <a style="color:black" href="https://www.globalaxis.com"><strong>GlobalAxis</strong></a>. All Right Reserved</p>
+                <p style="color:black">&copy; 2020 <a style="color:black" href="#"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;" class="digitalmagic">360DigitalMagic</a></p>
 
             </div>
             <!--/.foot-icons-->
