--- a/public/contatus.html
+++ b/public/contatus.html
@@ -159,7 +159,7 @@
                             <h4> Contact Us </h4>
                         </div>
                         <div class="Contact_us">
-                            <p><strong>Sanjay K Gupta</strong></p>
+                            <p style="font-size: 16px;"><strong>Sanjay K Gupta</strong></p>
                             <p>Founder & Managing Partner</p>
                             <p> <strong>Tel.: </strong> 0091-11-46767719, 46076724</p>
                             <p><strong>Mob.: </strong> 0091-9811141647</p>
