--- a/public/case-studies.html
+++ b/public/case-studies.html
@@ -307,7 +307,7 @@
                     <div class="col-sm-3">
                         <div class="single-footer-item">
                             <!-- <h2 style="color:white">OUR PARNTER</h2> -->
-                            <a href="#" target="_blank">
+                            <a href="index.html" target="_blank">
                                 <img class="img-responsive grow" style="max-width: 85%;" src="assets/images/logo.png" />
                             </a>
                             <div class="footer-logo">
@@ -380,7 +380,7 @@
                     <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li> -->
                     <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
-                <p style="color:black">&copy; 2020 <a style="color:black" href="#"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;" class="digitalmagic">360DigitalMagic</a></p>
+                <p style="color:black">&copy; 2020 <a style="color:black" href="index.html"><strong>GlobalAxis</strong></a>. All Right Reserved. Designed by <a href="https://www.360digitalmagic.com" target="_blank" style="color:#537abd;font-family:PT Sans;" class="digitalmagic">360DigitalMagic</a></p>
 
             </div>
             <!--/.foot-icons-->
