--- a/public/SourcingFromIndia.html
+++ b/public/SourcingFromIndia.html
@@ -199,7 +199,7 @@
                     <div class="col-sm-3">
                         <div class="single-footer-item">
                             <!-- <h2 style="color:white">OUR PARNTER</h2> -->
-                            <a href="index.html" target="_blank">
+                            <a href="index.html">
                                 <img class="img-responsive grow" style="max-width: 85%;" src="assets/images/logo.png" />
                             </a>
                             <div class="footer-logo">
